--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
-<html>
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html lang="en" style="width:100%; height:100%;">
 <head>
-<title>
-Varad V Pathak
-</title>
-
-<meta http-equiv="content-type" content="text/html; charset = utf-8">
-
-<body style = width="100%; margin =0;">
-
-<iframe src = "http://docs.google.com/gview?url=https://github.com/varadpathak2/resume/raw/master/Resume%20-%20Varad%20V%20Pathak%20D14082020.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0">
-
-</body>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <title>Varad's Resume</title>
+</head>
+  <body style="width:100%; height:100%; margin:0;">
+    <iframe src="https://docs.google.com/gview?url=https://github.com/varadpathak2/resume/raw/master/Resume%20-%20Varad%20V%20Pathak%20D14082020.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+  </body>
 </html>
-
