--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Varad's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/varadpathak2/resume/raw/master/Resume%20-%20Varad%20V%20Pathak%20D14082020.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/varadpathak2/resume/raw/master/Resume%20-%20Varad%20V%20Pathak%20D14082020.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"/>
   </body>
 </html>
